--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <title>ATX Construction</title>
-    <link href="/static/css/main.95e1cdb6.css.css" rel="stylesheet">
+    <link href="/static/css/main.95e1cdb6.css" rel="stylesheet">
   </head>
   <body><noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
